[B]Version 1.1.82[/B]
Hanime - fix playing free member videos