@@ -1,2 +1,3 @@
 [B]Version 1.1.82[/B]
 Hanime - fix playing free member videos
+Seaporn - bundle the same releases, with different resolution/codec, under 1 listitem
